--- a/mjy-spring-task/pom.xml
+++ b/mjy-spring-task/pom.xml
@@ -19,6 +19,16 @@
             <artifactId>spring-context</artifactId>
             <version>5.3.15</version>
         </dependency>
+
+<!--        <dependency>-->
+<!--            <groupId>javax.enterprise.concurrent</groupId>-->
+<!--            <artifactId>javax.enterprise.concurrent-api</artifactId>-->
+<!--            <version>1.1</version>-->
+<!--            <scope>provided</scope>-->
+<!--        </dependency>-->
+
     </dependencies>
+
+
 
 </project>
